--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 .body {
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-    background-color: darkgrey;
+    background-color: rgb(79, 66, 255);
 
     display: flex;
     justify-content: center;
@@ -27,6 +27,7 @@ li {
     border-right: 2px solid blue;
     background-color: blue;
     border-radius: 100px;
+    font-weight: bold;
 }
 
 li:hover {
